<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/play_grid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TableRow android:gravity="center_horizontal" >

            <Button
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal" >

            <Button
                android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal" >

            <Button
                android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="70dp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_grid"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/info_Label"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/player_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:text="@string/score_label_human"
            android:textSize="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/player_score_label"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="20dp"
            android:textStyle="bold" 
            android:paddingTop="20dp"/>

        <TextView
            android:id="@+id/tie_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/player_score"
            android:layout_below="@+id/information"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/score_label_tie"
            android:textSize="20dp"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/tie_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tie_score_label"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/computer_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/information"
            android:layout_below="@+id/information"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/zero"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/computer_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information"
            android:layout_toLeftOf="@+id/computer_score"
            android:gravity="right"
            android:text="@string/score_label_computer"
            android:textSize="20dp"
            android:paddingTop="20dp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>